--- a/scss/egresados.scss
+++ b/scss/egresados.scss
@@ -104,49 +104,7 @@ body{
 
         .carousel{
             grid-area: carru;
-            .carousel-inner{
-                .carousel-item{
-                    /*las review*/
-                    .hojas{
-                        /*le hago flex para que el texto quede centrado en el recuadro*/
-                        display: flex;
-                        flex-flow: row nowrap;
-                        justify-content: start;
-                        align-items: flex-start;
-                        
-
-                        @include tamaño(200px, 100px);
-                        @include autoEmparejamiento;
-
-                        border: 2px solid black;
-                        background-color: white;
-
-                        margin-bottom: 1cm;
-                        
-                        .fotoCarnet{
-                            @include tamaño(165px, 185px);
-                            border: 2px black solid;
-                            margin: auto 10px;
-                        }
-                        .texto{
-                            display: flex;
-                            flex-flow: column nowrap;
-                            justify-content: center;
-                            align-items: flex-start;
-
-                            margin-top: 5px;
-                            font-size: 17px;
-                            .review{
-                                @include tamaño(430px, 143px);
-                                overflow: auto;
-                                margin:0px;
-                            }
-                           
-                    
-                        }
-                    }
-                }
-            }
+            display:none;
         }
 
         /*redireccion a otras hojas del html*/
@@ -287,33 +245,50 @@ body{
         }
      
         .carousel{
+            grid-area: carru;
+            display: inline;
             .carousel-inner{
                 .carousel-item{
                     /*las review*/
                     .hojas{
-                        @include tamaño(500px, 200px);
+                        /*le hago flex para que el texto quede centrado en el recuadro*/
+                        display: flex;
+                        flex-flow: row nowrap;
+                        justify-content: start;
+                        align-items: flex-start;
+                        
 
+                        @include tamaño(540px, 200px);
+                        @include autoEmparejamiento;
+
+                        border: 2px solid black;
+                        background-color: antiquewhite;
+                        border-radius: 10px;
                         margin-bottom: 1cm;
-                        font-size: 17px;
+                        
+                        .fotoCarnet{
+                            @include tamaño(165px, 185px);
+                            border: 2px black solid;
+                            margin: auto 10px;
+                        }
+                        .texto{
+                            display: flex;
+                            flex-flow: column nowrap;
+                            justify-content: center;
+                            align-items: flex-start;
+
+                            margin-top: 5px;
+                            font-size: 17px;
+                            .review{
+                                @include tamaño(340px, 143px);
+                                overflow: auto;
+                                margin:0px;
+                            }
+                           
+                    
+                        }
                     }
-
-                    /*no me funciona la "," para que se repita un codigo en diferentes clases
-                    .hoja2{
-                        @include tamaño(500px, 200px);
-
-                        margin-bottom: 1cm;
-                        font-size: 17px;
-                    }*/
-
-                    /*no me funciona la "," para que se repita un codigo en diferentes clases
-                    .hoja3{
-                        @include tamaño(500px, 200px);
-
-                        margin-bottom: 1cm;
-                        font-size: 17px;
-                    }*/
-      
-                } 
+                }
             }
         }
 
@@ -395,13 +370,14 @@ body{
                         /*las review*/
                         .hojas{
                             @include tamaño(600px, 200px);
-
-                            margin-bottom: 1cm;
-                            font-size: 20px;
+                                .review{
+                                @include tamaño(430px, 143px);
+                            }
                         }
                     }
                 }
             }
+
 
             .hipervinculos{
                 font-size: 17px;
