--- a/css/egresado.css
+++ b/css/egresado.css
@@ -162,7 +162,6 @@ body {
       padding: 2mm 7mm;
       font-size: 17px; }
     body .contenedor .carousel {
-      grid-area: carru;
       display: inline; }
       body .contenedor .carousel .carousel-inner .carousel-item {
         /*las review*/ }
@@ -194,7 +193,7 @@ body {
             font-size: 17px; }
             body .contenedor .carousel .carousel-inner .carousel-item .hojas .texto .review {
               width: 340px;
-              height: 143px;
+              height: 105px;
               overflow: auto;
               margin: 0px; }
     body .contenedor .hipervinculos {
@@ -239,9 +238,9 @@ body {
       body .contenedor .carousel .carousel-inner .carousel-item .hojas {
         width: 600px;
         height: 200px; }
-        body .contenedor .carousel .carousel-inner .carousel-item .hojas .review {
+        body .contenedor .carousel .carousel-inner .carousel-item .hojas .texto .review {
           width: 430px;
-          height: 143px; }
+          height: 105px; }
     body .contenedor .hipervinculos {
       font-size: 17px;
       margin-bottom: 3mm; }
