--- a/css/main.css
+++ b/css/main.css
@@ -6,11 +6,7 @@ body {
   background-image: url(../imagenes/fondo3.png); }
   body .contenedor {
     display: grid;
-    grid-template-areas: "header "
- "tituloYSubtitulo"
- "main"
- "hipervinculos"
- "footer ";
+    grid-template-areas: "header " "tituloYSubtitulo" "main" "hipervinculos" "footer ";
     /*flecha que manda para arriba*/
     /*Pie de pagina*/ }
     body .contenedor header {
@@ -36,10 +32,10 @@ body {
             margin: 4mm 2mm;
             background-color: white; }
     body .contenedor .tituloYSubtitulo {
-      grid-area: tituloYSubtitulo; }
+      grid-area: tituloYSubtitulo;
+      display: block; }
       body .contenedor .tituloYSubtitulo .titulo {
         width: 9.5cm;
-        display: block;
         text-align: center;
         font-family: 'Times New Roman', Times, serif;
         font-size: 25px;
@@ -51,7 +47,6 @@ body {
         margin-right: auto; }
       body .contenedor .tituloYSubtitulo .informacionNoticia {
         width: 5cm;
-        display: block;
         text-align: center;
         font-family: 'Times New Roman', Times, serif;
         font-size: 20px;
@@ -262,11 +257,7 @@ body {
   background-image: url(../imagenes/fondo3.png); }
   body .contenedorCarreras {
     display: grid;
-    grid-template-areas: "header"
- "tituloYSubtitulo"
- "main" 
- "hipervinculos"
- "footer ";
+    grid-template-areas: "header" "tituloYSubtitulo" "main"  "hipervinculos" "footer ";
     /*todo lo que seria info en la pagina*/
     /*redireccion a otras hojas del html*/
     /*Pie de pagina*/ }
@@ -403,6 +394,9 @@ body {
 
 /*para pantallas de tablets hojaaq1 carrera*/
 @media only screen and (min-width: 650px) {
+  body .contenedorCarreras {
+    padding: 0px;
+    /*todo lo que seria info en la pagina*/ }
     body .contenedorCarreras header {
       top: 10px;
       margin: 5px 4mm; }
@@ -460,6 +454,9 @@ body {
 
 /*fin de quering para tablets*/
 @media only screen and (min-width: 1200px) {
+  body .contenedorCarreras {
+    padding: 0px;
+    /*todo lo que seria info en la pagina*/ }
     body .contenedorCarreras header {
       margin: 2mm 1cm;
       top: 5px; }
@@ -513,11 +510,7 @@ body {
   background-image: url(../imagenes/fondo3.png); }
   body .contenedorNosotros {
     display: grid;
-    grid-template-areas: "header"
- "tituloYSubtitulo"
- "main"
- "hipervinculos"
- "footer ";
+    grid-template-areas: "header" "tituloYSubtitulo" "main" "hipervinculos" "footer ";
     /*lo que cambia entre hoja y hoja de htmls*/
     /*todo lo que seria info en la pagina*/
     /*redireccion a otras hojas del html*/
@@ -597,10 +590,10 @@ body {
         width: auto;
         padding: 5px;
         background-color: #2ff3fb; }
-    body .contenedorNosotros footer {
+    body .contenedorNosotros .footerNosotros {
       grid-area: footer;
       margin-top: 10px; }
-      body .contenedorNosotros footer .pieDePagina {
+      body .contenedorNosotros .footerNosotros .pieDePagina {
         display: flex;
         flex-flow: column nowrap;
         align-items: center;
@@ -608,19 +601,19 @@ body {
         font-size: 14px;
         border-top: 3px solid #333300;
         background-color: #b181dd; }
-        body .contenedorNosotros footer .pieDePagina .subPieDePagina {
+        body .contenedorNosotros .footerNosotros .pieDePagina .subPieDePagina {
           padding: 5px; }
-          body .contenedorNosotros footer .pieDePagina .subPieDePagina iframe {
+          body .contenedorNosotros .footerNosotros .pieDePagina .subPieDePagina iframe {
             width: 300px;
             height: 150px; }
-        body .contenedorNosotros footer .pieDePagina .redes {
+        body .contenedorNosotros .footerNosotros .pieDePagina .redes {
           display: flex;
           flex-flow: row wrap;
           justify-content: center;
           align-items: center;
           margin-left: auto;
           margin-right: auto; }
-          body .contenedorNosotros footer .pieDePagina .redes .subRedes {
+          body .contenedorNosotros .footerNosotros .pieDePagina .redes .subRedes {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -630,10 +623,10 @@ body {
             background-color: #d5e3ff;
             border: 5px ridge #bafdff;
             font-size: 15px; }
-            body .contenedorNosotros footer .pieDePagina .redes .subRedes:hover {
+            body .contenedorNosotros .footerNosotros .pieDePagina .redes .subRedes:hover {
               transform: scale(1.19);
               transition: 1.5s; }
-            body .contenedorNosotros footer .pieDePagina .redes .subRedes .links {
+            body .contenedorNosotros .footerNosotros .pieDePagina .redes .subRedes .links {
               text-decoration: none;
               list-style: none;
               color: black;
@@ -641,6 +634,9 @@ body {
 
 /*para pantallas de tablets hojaaq1 nosotros*/
 @media only screen and (min-width: 650px) {
+  body .contenedorNosotros {
+    padding: 0px;
+    /*todo lo que seria info en la pagina*/ }
     body .contenedorNosotros header {
       top: 10px;
       margin: 5px 4mm; }
@@ -692,6 +688,9 @@ body {
 
 /*fin de quering para tablets*/
 @media only screen and (min-width: 1200px) {
+  body .contenedorNosotros {
+    padding: 0px;
+    /*todo lo que seria info en la pagina*/ }
     body .contenedorNosotros header {
       margin: 2mm 1cm;
       top: 5px; }
@@ -738,11 +737,7 @@ body {
   background-image: url(../imagenes/fondo3.png); }
   body .contenedorInscripciones {
     display: grid;
-    grid-template-areas: "header"
- "tituloYSubtitulo"
- "main"
- "hipervinculos"
- "footer ";
+    grid-template-areas: "header" "tituloYSubtitulo" "main" "hipervinculos" "footer ";
     /*redireccion a otras hojas del html*/
     /*Pie de pagina*/ }
     body .contenedorInscripciones header {
@@ -954,12 +949,7 @@ body {
   background-image: url(../imagenes/fondo3.png); }
   body .contenedorEgresado {
     display: grid;
-    grid-template-areas: "header"
- "tituloYSubtitulo"
- "main"
- "carru"
- "hipervinculos"
- "footer ";
+    grid-template-areas: "header" "tituloYSubtitulo" "main" "carru" "hipervinculos" "footer ";
     /*lo que cambia entre hoja y hoja de htmls*/
     /*todo lo que seria info en la pagina*/
     /*redireccion a otras hojas del html*/
@@ -1086,6 +1076,9 @@ body {
 
 /*para pantallas de tablets*/
 @media only screen and (min-width: 650px) {
+  body .contenedorEgresado {
+    padding: 0px;
+    /*todo lo que seria info en la pagina*/ }
     body .contenedorEgresado header {
       top: 10px;
       margin: 5px 4mm; }
@@ -1115,44 +1108,52 @@ body {
       height: 420px;
       margin-left: auto;
       margin-right: auto;
-      padding: 0px; }
+      padding: 0px;
+      margin-bottom: 1cm; }
       body .contenedorEgresado .informacionEgresados .subInformacionEgresados {
         margin: 20px 30px;
         padding: 10px;
         font-size: 19px; }
     body .contenedorEgresado .carousel {
-      display: inline; }
-        body .contenedorEgresado .carousel .carousel-inner .carousel-item .hojas {
-          /*le hago flex para que el texto quede centrado en el recuadro*/
-          display: flex;
-          flex-flow: row nowrap;
-          justify-content: start;
-          align-items: flex-start;
-          width: 540px;
-          height: 200px;
-          margin-left: auto;
-          margin-right: auto;
-          border: 2px solid black;
-          background-color: white;
-          border-radius: 10px;
-          margin-bottom: 1cm; }
-          body .contenedorEgresado .carousel .carousel-inner .carousel-item .hojas .fotoCarnet {
-            width: 165px;
-            height: 185px;
-            border: 2px black solid;
-            margin: auto 10px; }
-          body .contenedorEgresado .carousel .carousel-inner .carousel-item .hojas .texto {
+      display: inline;
+      /*las review*/ }
+      body .contenedorEgresado .carousel .carousel-inner {
+        padding: 0px; }
+        body .contenedorEgresado .carousel .carousel-inner .carousel-item {
+          padding: 0px; }
+          body .contenedorEgresado .carousel .carousel-inner .carousel-item .hojas {
+            /*le hago flex para que el texto quede centrado en el recuadro*/
             display: flex;
-            flex-flow: column nowrap;
-            justify-content: center;
+            flex-flow: row nowrap;
+            justify-content: start;
             align-items: flex-start;
-            margin-top: 5px;
-            font-size: 17px; }
-            body .contenedorEgresado .carousel .carousel-inner .carousel-item .hojas .texto .review {
-              width: 340px;
-              height: 105px;
-              overflow: auto;
-              margin: 0px; }
+            width: 540px;
+            height: 200px;
+            margin-left: auto;
+            margin-right: auto;
+            border: 2px solid black;
+            background-color: white;
+            border-radius: 10px;
+            margin-bottom: 1cm; }
+            body .contenedorEgresado .carousel .carousel-inner .carousel-item .hojas .fotoCarnet {
+              width: 165px;
+              height: 185px;
+              border: 2px black solid;
+              margin: auto 10px; }
+            body .contenedorEgresado .carousel .carousel-inner .carousel-item .hojas .texto {
+              display: flex;
+              flex-flow: column nowrap;
+              justify-content: center;
+              align-items: flex-start;
+              margin-top: 5px;
+              font-size: 17px; }
+              body .contenedorEgresado .carousel .carousel-inner .carousel-item .hojas .texto .nombreAlumno {
+                font-size: 23px; }
+              body .contenedorEgresado .carousel .carousel-inner .carousel-item .hojas .texto .review {
+                width: 340px;
+                height: 105px;
+                overflow: auto;
+                margin: 0px; }
     body .contenedorEgresado .hipervinculosEgresados {
       font-size: 19px; }
     body .contenedorEgresado footer .pieDePagina {
@@ -1169,6 +1170,10 @@ body {
 
 /*fin de quering para tablets*/
 @media only screen and (min-width: 1200px) {
+  body .contenedorEgresado {
+    padding: 0px;
+    /*todo lo que seria info en la pagina*/
+    /*las review*/ }
     body .contenedorEgresado header {
       margin: 2mm 1cm;
       top: 5px; }
@@ -1192,12 +1197,20 @@ body {
         margin: 30px 40px;
         padding: 7mm;
         font-size: 19px; }
-      body .contenedorEgresado .carousel .carousel-inner .carousel-item .hojas {
-        width: 600px;
-        height: 200px; }
-        body .contenedorEgresado .carousel .carousel-inner .carousel-item .hojas .texto .review {
-          width: 430px;
-          height: 105px; }
+    body .contenedorEgresado .carousel {
+      padding: 0px; }
+      body .contenedorEgresado .carousel .carousel-inner {
+        padding: 0px; }
+        body .contenedorEgresado .carousel .carousel-inner .carousel-item {
+          padding: 0px; }
+          body .contenedorEgresado .carousel .carousel-inner .carousel-item .hojas {
+            width: 600px;
+            height: 200px; }
+            body .contenedorEgresado .carousel .carousel-inner .carousel-item .hojas .texto .nombreAlumno {
+              font-size: 23px; }
+            body .contenedorEgresado .carousel .carousel-inner .carousel-item .hojas .texto .review {
+              width: 430px;
+              height: 105px; }
     body .contenedorEgresado .hipervinculosEgresados {
       font-size: 19px;
       margin-bottom: 3mm; }
